<resources>
    <string name="app_name">ShoeStore Inventory</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="create_account">Create Account</string>
    <string name="welcome">WELCOME</string>
    <string name="welcome_to_shoe_store_inventory_app">"To \nShoe Store Inventory"</string>
    <string name="instructions_text">"1. After pressing Next button you will see Shoe list. But it\'s empty, because you haven\'t added any Shoe.\n\n2. To add shoe you should press plus button. Then you should fill the required blanks."</string>
    <string name="next">NEXT</string>
    <string name="instructions">Instructions</string>
    <string name="add_shoe">Add Shoe</string>
    <string name="list_is_empty">List is Empty!</string>
    <string name="shoe_name">Shoe name:</string>
    <string name="shoe_company">Shoe company:</string>
    <string name="shoe_size">Shoe size:</string>
    <string name="shoe_description">Shoe description:</string>
    <string name="cancel">Cancel</string>
    <string name="save">SAVE</string>
    <string name="login">Login</string>
    <string name="shoes">Shoes</string>
    <string name="log_out">Log out</string>
    <string name="enter_shoe_name">Enter shoe name</string>
    <string name="enter_shoe_company">Enter shoe company</string>
    <string name="enter_shoe_size">Enter shoe size</string>
    <string name="enter_shoe_description">Enter shoe description</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="shopping_time">It\'s Shopping Time</string>
    <string name="description">Description:</string>
    <string name="name">Name:</string>
    <string name="size">Size:</string>
    <string name="company">Company:</string>
</resources>