<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />

        <variable
            name="shoeListViewModel"
            type="com.udacity.shoestore.viewModel.ShoeListViewModel" />
    </data>

    <!--Constraint Layout used, because I avoid from nested layouts and there are views not placed one another after(like list)-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dimen_16dp"
        android:clipToPadding="false"
        tools:context=".screens.ShoeDetailFragment">

        <TextView
            android:id="@+id/shoe_name_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/shoe_name"
            android:textSize="@dimen/dimen_20sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoe_name_input"
            app:layout_constraintEnd_toStartOf="@+id/shoe_name_input"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/shoe_name_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="Shoe name"
            android:hint="@string/enter_shoe_name"
            android:inputType="text"
            android:text="@={shoe.name}"
            app:layout_constraintBottom_toTopOf="@+id/shoe_company_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/shoe_name_label"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/shoe_company_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/shoe_company"
            android:textSize="@dimen/dimen_20sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoe_company_input"
            app:layout_constraintEnd_toStartOf="@+id/shoe_company_input"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/shoe_company_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="Shoe company"
            android:hint="@string/enter_shoe_company"
            android:inputType="text"
            android:text="@={shoe.company}"
            app:layout_constraintBottom_toTopOf="@+id/shoe_size_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/shoe_company_label"
            app:layout_constraintTop_toBottomOf="@+id/shoe_name_input"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/shoe_size_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/shoe_size"
            android:textSize="@dimen/dimen_20sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoe_size_input"
            app:layout_constraintEnd_toStartOf="@+id/shoe_size_input"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/shoe_size_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="Shoe size"
            android:hint="@string/enter_shoe_size"
            android:inputType="numberDecimal"
            android:text="@={``+shoe.size}"
            app:layout_constraintBottom_toTopOf="@+id/shoe_description_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/shoe_size_label"
            app:layout_constraintTop_toBottomOf="@+id/shoe_company_input" />

        <TextView
            android:id="@+id/shoe_description_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/shoe_description"
            android:textSize="@dimen/dimen_20sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoe_description_input"
            app:layout_constraintEnd_toStartOf="@+id/shoe_description_input"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/shoe_description_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="Shoe description"
            android:hint="@string/enter_shoe_description"
            android:inputType="text"
            android:text="@={shoe.description}"
            app:layout_constraintBottom_toTopOf="@+id/save_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/shoe_description_label"
            app:layout_constraintTop_toBottomOf="@+id/shoe_size_input"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/save_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_8dp"
            android:onClick="@{(view) -> shoeListViewModel.addShoe(shoe, view) }"
            android:text="@string/save"
            app:layout_constraintBaseline_toBaselineOf="@+id/cancel_button"
            app:layout_constraintEnd_toStartOf="@+id/cancel_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/save_button"
            app:layout_constraintTop_toBottomOf="@+id/shoe_description_input"
            tools:ignore="ButtonStyle" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>