<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--LinearLayout used because it is easy UI and views inside the LinearLayout are placed one after another(like list)-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dimen_16dp"
            android:clipToPadding="false"
            tools:context=".models.InstructionFragment">

            <TextView
                android:id="@+id/instructions_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/dimen_16dp"
                android:text="@string/instructions"
                android:textSize="@dimen/dimen_30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/instructions_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_16dp"
                android:text="@string/instructions_text"
                android:textSize="@dimen/dimen_24sp"
                tools:text="1. After pressing Next button you will see Shoe list. But it's empty, because you haven't added any Shoe.\n\n2. To add shoe you should press plus button. Then you should fill the required blanks." />

            <Button
                android:id="@+id/next_btn_instructions"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/next" />
        </LinearLayout>

    </ScrollView>

</layout>