<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.WelcomeFragment">

        <TextView
            android:id="@+id/welcome_txt"
            android:layout_width="297dp"
            android:layout_height="69dp"
            android:layout_marginTop="32dp"
            android:paddingHorizontal="@dimen/dimen_16dp"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/welcome_txt2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="WELCOME" />

        <TextView
            android:id="@+id/welcome_txt2"
            android:layout_width="395dp"
            android:layout_height="133dp"
            android:paddingHorizontal="@dimen/dimen_16dp"
            android:text="@string/welcome_to_shoe_store_inventory_app"
            android:textAlignment="center"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/next_btn_welcome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_txt"
            app:layout_constraintVertical_bias="0.73"
            tools:text="To \nShoe Store Inventory" />

        <Button
            android:id="@+id/next_btn_welcome"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="280dp"
            android:text="@string/shopping_time"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
